# compiler

./: .gitmodules  CMakeLists.txt  Makefile  README.md  pbbt.yaml
compiler/include/: any.h  anyCommand.h  command.h  condition.h  declaration.h  expression.h  expressionType.h  identifier.h  program.h  value.h
compiler/include/commands/: assign.h  conditionalLoop.h  forLoop.h  ifStatement.h  read.h  translate.h  write.h
compiler/include/common/: anything.h  command.h  condition.h  declaration.h  expression.h  expressionType.h  identifier.h  program.h  value.h
compiler/include/declarations/: table.h  variable.h
compiler/include/expressions/: addExpression.h  divExpression.h  modExpression.h  mulExpression.h  subExpression.h
compiler/include/identifiers/: constantTableIdentifier.h  labeledTableIdentifier.h  variableIdentifier.h
compiler/include/intercode/: address.h  intercode.h
compiler/src/: assign.cpp  condition.cpp  conditionalLoop.cpp  declaration.cpp  forLoop.cpp  ifStatement.cpp  intercode.cpp  lang.l  lang.y  machinecode.cpp  main.cpp  program.cpp  read.cpp  table.cpp  translate.cpp  variable.cpp  write.cpp
test-framework/: all.yaml  errors.yaml  input.yaml  programs-compiling.yaml  test_runner.py  tests.yaml
tests/: all.yaml  div.yaml  errors.yaml  programs-compiling.yaml  programs.yaml  tests.yaml  vm.yaml
tests/programs/: test-0.imp  test-1.imp  test-2.imp  test-3.imp  test-4.imp  test-5.imp  test-6.imp  test-7.imp  test-ValidateCounterViolationVisitor-1.imp  test-ValidateCounterViolationVisitor-2.imp  test-mul-tables.imp  test-while.imp
(+5 files in other folders)
